# Reversi

./: AI.cpp  AI.h  Board.h  BoardConsole.cpp  BoardConsole.h  CMakeLists.txt  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  Human.cpp  Human.h  Player.h  Point.cpp  Point.h  main.cpp
include/: AI.h  Board.h  BoardConsole.h  Game.h  GameLogic.h  Human.h  Player.h  Point.h  UserInterface.h  UserPrinterConsole.h
src/: AI.cpp  BoardConsole.cpp  Game.cpp  GameLogic.cpp  Human.cpp  Point.cpp  UserPrinterConsole.cpp  main.cpp
tests/: AITest.cpp  AITest.h  BoardTest.cpp  BoardTest.h  GameLogicTest.cpp  GameLogicTest.h  HumanTest.cpp  HumanTest.h  PointTest.cpp  PointTest.h  gtest_main.cpp
